# poosd-project

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/TutorTalk/: .factorypath
backend/TutorTalk/src/main/java/com/tutor/: ApiGatewayResponse.java  UserHandler.java
backend/TutorTrade/: mapping_template.yml  pom.xml  serverless.yml  swagger.json  swagger.yaml
backend/TutorTrade/src/main/java/com/tutor/: ApiStages.java  ApiUtils.java  PopulateRequests.java  Response.java  User.java  UserBuilder.java  UserBuilderException.java
backend/TutorTrade/src/main/java/com/tutor/chat/: Chat.java  ChatHandler.java
backend/TutorTrade/src/main/java/com/tutor/matches/: MatchesHandler.java
backend/TutorTrade/src/main/java/com/tutor/matching/: MatchingConstants.java  MatchingHandler.java  MatchingUtils.java  RequestKnn.java  RequestKnnData.java  RequestKnnDataNormalized.java  RequestKnnException.java  UpdateNormalizedRequestData.java
backend/TutorTrade/src/main/java/com/tutor/request/: MatchStatus.java  Platform.java  Request.java  RequestBuilder.java  RequestBuilderException.java  RequestSubjects.java  RequestsHandler.java  Status.java  Subject.java  Urgency.java
backend/TutorTrade/src/main/java/com/tutor/subject/: Subject.java  SubjectsHandler.java
backend/TutorTrade/src/main/java/com/tutor/subjects/: SubjectsHandler.java
backend/TutorTrade/src/main/resources/: presetMessages.json
backend/TutorTrade/src/test/resources/: invalidUserToPost.json  users.json  validPostRequest.json  validUserToPost.json
backend/backend/: tutoring_api.py
(+209 files in other folders)
