[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jesse Gingold <jgingold@knights.ucf.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "backend.tutoring_api:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
